--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
   "author": "TehShrike",
   "license": "WTFPL",
   "dependencies": {
+    "cookie": "^0.1.2",
+    "cookies": "^0.5.0",
+    "domready": "^1.0.7",
     "github": "^0.2.3",
     "just-login-core": "^1.2.7",
+    "just-login-debouncer": "^1.3.0",
     "just-login-emailer": "^1.1.0",
+    "level-mem": "^0.18.0",
     "promise": "^6.0.1",
+    "random-uuid-v4": "0.0.4",
+    "socket.io": "^1.2.1",
+    "socket.io-client": "^1.2.1",
     "sync-github-to-fs": "^1.0.0"
   }
 }
