--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "cookie": "^0.1.2",
     "cookies": "^0.5.0",
+    "dom-classes": "0.0.1",
     "domready": "^1.0.7",
+    "es6-shim": "^0.22.2",
     "github": "^0.2.3",
+    "hidden": "^1.0.0",
     "just-login-core": "^1.2.7",
     "just-login-debouncer": "^1.3.0",
     "just-login-emailer": "^1.1.0",
