--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "TehShrike",
   "license": "WTFPL",
   "dependencies": {
+    "concat-stream": "^1.4.7",
     "cookie": "^0.1.2",
     "cookies": "^0.5.0",
     "dom-classes": "0.0.1",
