--- a/package.json
+++ b/package.json
@@ -10,21 +10,7 @@
   "license": "WTFPL",
   "dependencies": {
     "concat-stream": "^1.4.7",
-    "cookie": "^0.1.2",
-    "cookies": "^0.5.0",
-    "dom-classes": "0.0.1",
-    "domready": "^1.0.7",
-    "es6-shim": "^0.22.2",
-    "github": "^0.2.3",
-    "hidden": "^1.0.0",
-    "just-login-core": "^1.2.7",
-    "just-login-debouncer": "^1.3.0",
-    "just-login-emailer": "^1.1.0",
-    "level-mem": "^0.18.0",
-    "promise": "^6.0.1",
-    "random-uuid-v4": "0.0.4",
-    "socket.io": "^1.3.0",
-    "socket.io-client": "^1.3.0",
+    "private-static-website": "^1.0.0",
     "sync-github-to-fs": "^1.0.0"
   }
 }
