--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   "author": "TehShrike",
   "license": "WTFPL",
   "dependencies": {
-    "concat-stream": "^1.4.7",
-    "private-static-website": "^1.0.0",
-    "sync-github-to-fs": "^1.0.0"
+    "concat-stream": "~1.4.7",
+    "private-static-website": "~1.2.1",
+    "sync-github-to-fs": "~2.0.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/TehShrike/private-github-website.git"
   },
   "devDependencies": {
-    "github": "^0.2.3"
+    "github": "7.2.0"
   }
 }
